--- a/backend.html
+++ b/backend.html
@@ -24,53 +24,72 @@
                         <div class='service-banner'></div>
                     </div>
                     <div class="col s12 m6 l6 services-content" >
-                        <div class="scroll">
-                            <h4>Customer Support (Back End)</h4>
-                            <p class="grey-text">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. We at Deegeelab can do the following back-end customer support processes:</p>
-                            <table class="grey-text paragraph">
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Handle office admin processes</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Attract new customers into your systems.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Enter data in a CRM system or update customer records</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Digitize your business to increase its accessibility.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Handle emails Inbound/Outbound Chat Support</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Handle all paperwork that can be processed online</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>File documents</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Send electronic paper transactions</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Manage Accounting Applications</td>                                
-                                </tr>                                
-                            </table>
-                            <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                            <div style="height: 200px;"></div>
+                        <div class="col s12">
+                            <div class="left">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="right">
+                                <ul>
+                                    <li style="top: 5px;position:  relative;">
+                                        <a href="webdev.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
+                                        <a href="frontend.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="scroll">
+                                <h4>Customer Support (Back End)</h4>
+                                <p class="grey-text">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. We at Deegeelab can do the following back-end customer support processes:</p>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Handle office admin processes</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Attract new customers into your systems.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Enter data in a CRM system or update customer records</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Digitize your business to increase its accessibility.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Handle emails Inbound/Outbound Chat Support</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Handle all paperwork that can be processed online</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>File documents</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Send electronic paper transactions</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Manage Accounting Applications</td>                                
+                                    </tr>                                
+                                </table>
+                                <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                                <div style="height: 200px;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,18 +98,18 @@
         <div id="footer">
             <div class="left">
                 <ul>
-                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                    <li style="top: 5px;position:  relative;">
-                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                    <li style="top: -20px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
@@ -100,7 +119,7 @@
                 <li>
                     <div class="row">
                         <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
-                        <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                        <ul class="collapsible collapsible-accordion" style="top: 10%; position: absolute;">
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
                             </li>
@@ -118,6 +137,15 @@
                             </li>
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row social-icons">
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
