--- a/frontend.html
+++ b/frontend.html
@@ -24,61 +24,80 @@
                         <div class='service-banner'></div>
                     </div>
                     <div class="col s12 m6 l6 services-content" >
-                        <div class="scroll">
-                            <h4>Customer Support (Front End)</h4>
-                            <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-                            <table class="grey-text paragraph">
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Resolve customer complaints via phone, email, mail, or social media.</td>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Use telephones to reach out to customers.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Advise on company information.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Act as the company gatekeeper.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Suggest solutions for customer problems.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Inform customer of deals and promotions.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Sell products and services.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Utilize computer technology to handle high call volumes.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Work with customer service manager to ensure proper customer service is being delivered.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Close out or open call records.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Read from scripts.</td>                                
-                                </tr>                                
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Handle changes in service policies or renewals.</td>                                
-                                </tr>                                
-                            </table>
-                            <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                            <div style="height: 200px;"></div>
+                        <div class="col s12">
+                            <div class="left">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="right">
+                                <ul>
+                                    <li>
+                                        <a href="backend.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
+                                        <a href="social.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
+                        <div class="col s12">
+                            <div class="scroll">
+                                <h4>Customer Support (Front End)</h4>
+                                <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Resolve customer complaints via phone, email, mail, or social media.</td>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Use telephones to reach out to customers.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Advise on company information.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Act as the company gatekeeper.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Suggest solutions for customer problems.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Inform customer of deals and promotions.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Sell products and services.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Utilize computer technology to handle high call volumes.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Work with customer service manager to ensure proper customer service is being delivered.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Close out or open call records.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Read from scripts.</td>                                
+                                    </tr>                                
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Handle changes in service policies or renewals.</td>                                
+                                    </tr>                                
+                                </table>
+                                <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                                <div style="height: 200px;"></div>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
            </div>
@@ -86,18 +105,18 @@
         <div id="footer">
             <div class="left">
                 <ul>
-                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                    <li style="top: 5px;position:  relative;">
-                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                    <li style="top: -20px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
@@ -106,8 +125,8 @@
             <ul id="menu" class="side-nav">
                 <li>
                     <div class="row">
-                        <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons" style="text-shadow: 1px 1px 20px #000;">close</i></a>
-                        <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                        <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
+                        <ul class="collapsible collapsible-accordion" style="top: 10%; position: absolute;">
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
                             </li>
@@ -125,6 +144,15 @@
                             </li>
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row social-icons">
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
