--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -79,8 +79,8 @@
                     <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
                     <li style="top: 5px;position:  relative;">
                         <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/twitterlogo.png"></a>
                     </li>
                 </ul>
             </div>
