--- a/marketing.html
+++ b/marketing.html
@@ -23,54 +23,73 @@
                         <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
                         <div class='service-banner'></div>
                     </div>
-                    <div class="col s10 m6 l6 offset-s1 services-content">
-                        <div class="scroll">
-                            <h4>Digital Marketing</h4>
-                            <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
-                            <table class="grey-text paragraph">
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Develop and implement SEO and PPC strategies</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Create and manage link building strategies, content marketing strategies, and social media presences</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Innovate and present new marketing platforms and strategies</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Manage email and social media marketing campaigns</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Use Google Analytics, Google AdWords, and other relevant sites</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Drive traffic to client’s website</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Develop website and maintain (Purchasing of Domain and Hosting not included)</td>                                
-                                </tr>
-                                <tr>
-                                    <td><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td>Inbound Marketing and Content Strategy</td>                                
-                                </tr>
-                            </table>
-                            <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                            <div style="height: 200px;"></div>
+                    <div class="col s12 m6 services-content">
+                        <div class="col s12">
+                            <div class="left">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="right">
+                                <ul>
+                                    <li style="top: 5px;position:  relative;">
+                                        <a href="social.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
+                                        <a href="lead.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="scroll">
+                                <h4>Digital Marketing</h4>
+                                <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Develop and implement SEO and PPC strategies</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Create and manage link building strategies, content marketing strategies, and social media presences</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Innovate and present new marketing platforms and strategies</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Manage email and social media marketing campaigns</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Use Google Analytics, Google AdWords, and other relevant sites</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Drive traffic to client’s website</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Develop website and maintain (Purchasing of Domain and Hosting not included)</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Inbound Marketing and Content Strategy</td>                                
+                                    </tr>
+                                </table>
+                                <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                                <div style="height: 200px;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,18 +98,18 @@
         <div id="footer">
             <div class="left">
                 <ul>
-                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                    <li style="top: 5px;position:  relative;">
-                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                    <li style="top: -20px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
@@ -100,7 +119,7 @@
                 <li>
                     <div class="row">
                         <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
-                        <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                        <ul class="collapsible collapsible-accordion" style="top: 10%; position: absolute;">
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
                             </li>
@@ -118,6 +137,15 @@
                             </li>
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row social-icons">
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
