--- a/social.html
+++ b/social.html
@@ -24,38 +24,57 @@
                         <div class='service-banner'></div>
                     </div>
                     <div class="col s12 m6 l6 services-content">
-                        <div class="scroll">
-                            <h4>Social Media Management</h4>
-                            <p class="grey-text">Social media management is a critical part of any online marketing strategy. Social media allows you to expand your network and put your business on the radar of your prospect market. Most customers spend a lot of time on social media. They reach out about their orders and send inquiries through social media.  As such, creating and managing an active social media page for your business is a must. We at Deegeelab specialize in:</p>
+                        <div class="col s12">
+                            <div class="left">
+                                <ul>
+                                    <li>
+                                        <a href="index.html"><i class="material-icons" style="line-height: unset;">home</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="right">
+                                <ul>
+                                    <li>
+                                        <a href="frontend.html"><i class="material-icons" style="line-height: unset;">arrow_back</i> </a>
+                                        <a href="marketing.html"><i class="material-icons" style="line-height: unset;">arrow_forward</i> </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col s12">
+                            <div class="scroll">
+                                <h4>Social Media Management</h4>
+                                <p class="grey-text">Social media management is a critical part of any online marketing strategy. Social media allows you to expand your network and put your business on the radar of your prospect market. Most customers spend a lot of time on social media. They reach out about their orders and send inquiries through social media.  As such, creating and managing an active social media page for your business is a must. We at Deegeelab specialize in:</p>
 
-                            <table class="grey-text paragraph">
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</td>                                
-                                </tr>
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Growing your followers and reaching out to your audience</td>                                
-                                </tr>
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Engaging with related social media communities</td>                                
-                                </tr>
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Publishing written and graphic content that are consistent with your brand</td>                                
-                                </tr>
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Replying to messages on your social media channels</td>                                
-                                </tr>
-                                <tr>
-                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                    <td> Keeping abreast with the latest social media trends in your industry</td>                                
-                                </tr>
-                            </table>
-                            <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
-                            <div style="height: 200px;"></div>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Growing your followers and reaching out to your audience</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Engaging with related social media communities</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Publishing written and graphic content that are consistent with your brand</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Replying to messages on your social media channels</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td> Keeping abreast with the latest social media trends in your industry</td>                                
+                                    </tr>
+                                </table>
+                                <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                                <div style="height: 200px;"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -64,18 +83,18 @@
         <div id="footer">
             <div class="left">
                 <ul>
-                    <li><img width="60px" src="assets/images/footer/dgwhite.png"></li>
-                    <li><a class="white-text" href='#'><i class="material-icons" style="line-height: unset;">copyright</i> <span class="right">2017 Deegeelab</span></a></li>
+                    <li><img width="60px" src="assets/images/icons/dgwhite.png"></li>
+                    <li class="grey-text"><i class="material-icons" >copyright</i> <span class="right">2017 Deegeelab</span></li>
                 </ul>
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="privacy-policy.html" class="white-text">Privacy Policy</a></li>
-                    <li><a href="terms-of-use.html" class="white-text">Terms of use</a></li>
-                    <li style="top: 5px;position:  relative;">
-                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" class="left social-icons" src="assets/images/footer/facebook_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="35px" class="left social-icons" src="assets/images/footer/instagram_icon.png"></a>
-                        <a href="http://localhost/deegeelab/"><img width="30px" class="left social-icons" src="assets/images/footer/goog_icon.png"></a>
+                    <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                    <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                    <li style="top: -20px;position:  relative;">
+                        <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                        <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                        <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                     </li>
                 </ul>
             </div>
@@ -85,7 +104,7 @@
                 <li>
                     <div class="row">
                         <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
-                        <ul class="collapsible collapsible-accordion" style="top: 30%; position: absolute;">
+                        <ul class="collapsible collapsible-accordion" style="top: 10%; position: absolute;">
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
                             </li>
@@ -103,6 +122,15 @@
                             </li>
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="frontend.html">Customer Support Front-End</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="row social-icons">
+                        <ul>
+                            <li>
+                                <a href="https://www.facebook.com/DeeGeeLabAU/"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU"><img width="35px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
